--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
+    "recharts": "^2.15.0",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
